# ai-3d-spatial-reasoning

./: .envrc  .gitignore  README.md  pyproject.toml
datasets/kaggle_benchmark/: orthographic_dataset_5v_fixed_3_tasks.json  orthographic_dataset_5v_fixed_4_tasks.json  orthographic_dataset_5v_fixed_5_tasks.json  orthographic_dataset_mc_fixed_3_tasks.json  orthographic_dataset_mc_fixed_4_tasks.json  orthographic_dataset_mc_fixed_5_tasks.json
datasets/raw/: orthographic_dataset_fixed_3_tasks.json  orthographic_dataset_fixed_4_tasks.json  orthographic_dataset_fixed_5_tasks.json  reference_scene.json
docs/: kaggle_submission_writeup.md
results_from_kaggle/: results_5v_fixed_3_tasks_50.json  results_5v_fixed_4_tasks_50.json  results_5v_fixed_5_tasks_20.json  results_mc_fixed_3_tasks_50.json  results_mc_fixed_4_tasks_50.json  results_mc_fixed_5_tasks_20.json  summary_5v.xlsx  summary_mc.xlsx  ~$summary_5v.xlsx
src/analysis/: generate_demo.ipynb
src/analysis/camera_positions/: film_camera.glb  readme.md  voxel_viewer.html
src/benchmark/dataset/: generate_datasets_for_benchmarks.ipynb  generate_voxel_scene_datasets.ipynb
src/benchmark/tasks/: five-views-fixed-3-notebook.ipynb  multiple-choice-fixed-3-notebook.ipynb
src/evaluation/: analysis.ipynb  benchmark models.md
src/generation/: README.md  projection.py  scene.py  visualization.py
src/task_viewer/: README.md  arc-colors.js  index.html  serve.py  styles.css  three-scene.js  viewer.js
tests/: test_generation.py
