[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "ai-measuring-toward-agi-competition"
version = "0.1.0"
description = "AI Measuring Toward AGI Competition project"
requires-python = ">=3.11"
dependencies = [
    # Core Python scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    
    # HuggingFace ecosystem
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers",
    
    # Visualization
    "matplotlib>=3.7.0",
    "streamlit",
    'seaborn>=0.12.0',
    "pillow>=10.0.0",
    "tabulate>=0.9.0",
    
    # Jupyter environment
    "jupyter",
    "ipykernel",
    
    # Development and analysis tools
    "deepdiff",
    
    # Web framework
    "django>=4.2.0",
    "django-cors-headers",
    "pymongo>=4.0.0",
    
    # Specialized packages
    "orjsonl",
    "func-timeout",
    "wandb",

    # Kaggle
    "kaggle_benchmarks"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hatchling",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
